# trukyc-adk

./: .gitignore  Dockerfile  LICENSE  README.md  admin.sh  deploy.sh  requirements.txt
orchestrator/: agent.py
orchestrator/sub_agents/: __init__.py  _agent.py  browser_agent.py  discord_agent.py  email_agent.py  hn_agent.py  reddit_agent.py  research_agent.py  trading_agent.py  x_agent.py
trending_topics/: agent.py
truclaw_adk_final/: README.md  pyproject.toml
truclaw_adk_final/orchestrator/: agent.py
truclaw_adk_final/orchestrator/sub_agents/: __init__.py  email_agent.py  research_agent.py  trading_agent.py
truclaw_adk_final/scripts/: update_policy_customer_service.py
truclaw_adk_final/truclaw_adk/: TruClaw-Policies.template.json  __init__.py  admin_cli.py  autopatch.py  challenge.py  chat_handler.py  cli.py  config.py  cron_aggregator.py  danger.py  gcs_storage.py  guardrail.py  jwt_verify.py  ledger.py  logging.py  pair_route.py  pairing.py  policy.py  protect.py
truclaw_adk_final/truclaw_adk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
