[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["truclaw_adk*", "orchestrator*"]

[project]
name = "truclaw-adk"
version = "0.1.0"
description = "TruClaw guardrail for Google ADK"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "cryptography>=42.0",
]

[project.scripts]
truclaw = "truclaw_adk.cli:main"
